// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for CannyFunctions's group destination action: all fields 1`] = `
Object {
  "groupId": "iFCL@q",
  "traits": Object {
    "testType": "iFCL@q",
  },
  "type": "iFCL@q",
}
`;

exports[`Testing snapshot for CannyFunctions's group destination action: required fields 1`] = `
Object {
  "groupId": "iFCL@q",
  "type": "iFCL@q",
}
`;
